# aicpp

./: .gitignore  Brain.cpp  Brain.h  CITATION.bib  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Connection.cpp  Connection.h  Dockerfile  Doxyfile  Neuron.h  README.md  RESEARCH_POSITIONING.md  RESULTS.md  ROADMAP.md  benchmark_arc-agi.cpp  hello_world.cpp  main.cpp  pyproject.toml  requirements.txt  setup.py  test_ai1.cpp  test_ai3.cpp  test_ai5.cpp  test_learn.cpp  utility.h
.github/workflows/: test.yml
doc/html/: Brain_8cpp.html  Brain_8cpp__incl.map  Brain_8cpp__incl.md5  Brain_8cpp_source.html  Brain_8h.html  Brain_8h__dep__incl.map  Brain_8h__dep__incl.md5  Brain_8h__incl.map  Brain_8h__incl.md5  Brain_8h_source.html  CONTRIBUTING_8md.html  Connection_8cpp.html  Connection_8cpp__incl.map  Connection_8cpp__incl.md5  Connection_8cpp_source.html  Connection_8h.html  Connection_8h__dep__incl.map  Connection_8h__dep__incl.md5  Connection_8h__incl.map  Connection_8h__incl.md5  Connection_8h_source.html  Neuron_8cpp.html  Neuron_8cpp__incl.map  Neuron_8cpp__incl.md5  Neuron_8cpp_source.html  Neuron_8h.html  Neuron_8h__dep__incl.map  Neuron_8h__dep__incl.md5  Neuron_8h__incl.map  Neuron_8h__incl.md5  Neuron_8h_source.html  README_8md.html  RESEARCH__POSITIONING_8md.html  RESULTS_8md.html  ROADMAP_8md.html  annotated.html  changelog_8md.html  classBarEnvironment-members.html  classBarEnvironment.html  classBarEnvironment__coll__graph.map  (+5024 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_13.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_27.js  all_28.js  all_29.js  all_2a.js  all_2b.js  all_2c.js  all_2d.js  all_2e.js  all_2f.js  all_30.js  all_31.js  all_32.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  (+157 more)
doc/latex/: Brain_8cpp.tex  Brain_8cpp__incl.md5  Brain_8cpp_source.tex  Brain_8h.tex  Brain_8h__dep__incl.md5  Brain_8h__incl.md5  Brain_8h_source.tex  Connection_8cpp.tex  Connection_8cpp__incl.md5  Connection_8cpp_source.tex  Connection_8h.tex  Connection_8h__dep__incl.md5  Connection_8h__incl.md5  Connection_8h_source.tex  Neuron_8cpp.tex  Neuron_8cpp__incl.md5  Neuron_8cpp_source.tex  Neuron_8h.tex  Neuron_8h__dep__incl.md5  Neuron_8h__incl.md5  Neuron_8h_source.tex  RESEARCH__POSITIONING_8md.tex  RESULTS_8md.tex  ROADMAP_8md.tex  annotated.tex  changelog_8md.tex  classBarEnvironment.tex  classBarEnvironment__inherit__graph.md5  classBase.tex  classBase__inherit__graph.md5  classBase_a1d5f3fb92f8cbc687705785bdc6abd18_icgraph.md5  classBase_a779fd2b157ebd763b15383d96047e07c_icgraph.md5  classBiggestIntConvertible.tex  classChildClassWithStreamOperator.tex  classChildClassWithStreamOperator__coll__graph.md5  classChildClassWithoutStreamOperator.tex  classChildClassWithoutStreamOperator__inherit__graph.md5  classCommentTest.tex  classCommentTest__inherit__graph.md5  classCommonTest.tex  (+2445 more)
include/aicpp/: Brain.h  Connection.h  Neuron.h  partials.h  primitives.h  utility.h
scripts/: analyze_results.py  engine.py  evaluation_results.md  output0d3d703e.txt  output253bf280.txt  output3c9b0459.txt  output5614dbcf.txt  output6150a2bd.txt  output67a3c6ac.txt  output68b16354.txt  output9dfd6313.txt  outputa416b8f3.txt  outputc59eb873.txt  outputc8f0f002.txt  primitives.py  prompt0d3d703e.txt  prompt253bf280.txt  prompt3c9b0459.txt  prompt4c4377d9.txt  prompt5614dbcf.txt  prompt6150a2bd.txt  prompt67a3c6ac.txt  prompt68b16354.txt  prompt6d0aefbc.txt  prompt6fa7a44f.txt  prompt74dd1130.txt  prompt8be77c9e.txt  prompt9172f3a0.txt  prompt9dfd6313.txt  prompta416b8f3.txt  promptb1948b0a.txt  promptc59eb873.txt  promptc8f0f002.txt  promptc9e6f938.txt  promptd10ecb37.txt  promptd511f180.txt  prompted36ccf7.txt  test_arc.py  test_arc_task.py  test_pyaicpp.py  (+3 more)
scripts/data/evaluation/: output0934a4d8.md  output135a2760.md  output136b0064.md  output13e47133.md  output142ca369.md  output16b78196.md  output16de56c4.md  output1818057f.md  output195c6913.md  output1ae2feb7.md  output20270e3b.md  output20a9e565.md  output21897d95.md  output221dfab4.md  output247ef758.md  output269e22fb.md  output271d71e2.md  output28a6681f.md  output291dc1e1.md  output2b83f449.md  output2ba387bc.md  output2c181942.md  output2d0172a1.md  output31f7f899.md  output332f06d7.md  output35ab12c3.md  output36a08778.md  output38007db0.md  output3a25b0d8.md  output3dc255db.md  output3e6067c3.md  output409aa875.md  output446ef5d2.md  output45a5af55.md  output4a21e3da.md  output4c3d4a41.md  output4c416de3.md  output4c7dc4dd.md  output4e34c42c.md  output53fb4810.md  (+200 more)
scripts/data/training/: output00dbd492.txt  output017c7c7b.txt  output025d127b.txt  output03560426.md  output03560426.txt  output0d3d703e.md  output0d3d703e.txt  output11dc524f.txt  output13f06aa5.txt  output14754a24.txt  output19bb5feb.txt  output1cf80156.txt  output1d61978c.md  output1d61978c.txt  output2037f2c7.txt  output20fb2937.txt  output23581191.md  output23581191.txt  output2546ccf6.md  output2546ccf6.txt  output25ff71a9.md  output25ff71a9.txt  output264363fd.md  output264363fd.txt  output278e5215.md  output278e5215.txt  output27a77e38.md  output27a77e38.txt  output281123b4.md  output281123b4.txt  output28bf18c6.md  output28bf18c6.txt  output292dd178.md  output292dd178.txt  output2dee498d.md  output2dee498d.txt  output305b1341.md  output305b1341.txt  output30f42897.txt  output32597951.txt  (+1783 more)
scripts/tasks/training/: output0d3d703e.txt  output2dee498d.txt  output4c4377d9.txt  output5582e5ca.txt  output6150a2bd.txt  output67a3c6ac.txt  output68b16354.txt  output6d0aefbc.txt  output74dd1130.txt  output9172f3a0.txt  outputa416b8f3.txt  (+29 more)
src/: Brain.cpp  Connection.cpp  Neuron.cpp  arc-agi.cpp  arc-agi_tasks.cpp  benchmark_arc-agi.cpp  engine.cpp  engine.cpp.in1  engine.cpp.in2  hello_world.cpp  main.cpp  python_bindings.cpp  test_ai1.cpp  test_ai3.cpp  test_ai5.cpp  test_aicpp.cpp  test_arc-agi.cpp  test_learn.cpp
src/aicpp/: Brain.cpp  Connection.cpp  Neuron.cpp  primitives.cpp
